[2024-1] Use BufferedReader instead of passing List<String>